[package]
name = "SlackInput"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", default-features = true }
[dependencies.windows]
version = "0.62"
features = [
    "Gaming_Input",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
